Fix nagging alignment issue

--- a/pdf.css
+++ b/pdf.css
@@ -166,7 +166,7 @@ li {
 
 .job h4 {
     position: absolute; 
-    top: 0.35em; 
+    top: 3px; 
     right: 0; 
 }
 
