--- a/resume.css
+++ b/resume.css
@@ -170,7 +170,7 @@ li {
 
 .job h4 {
     position: absolute; 
-    top: 0.35em; 
+    top: 3px; 
     right: 0; 
 }
 
